# isidore

./: .gitignore  LICENSE.md  Makefile  README.md  change_version.sh  isidore.cfg.sample  requirements.txt  setup_env.csh  setup_env.sh
db/: create_db.sql
doc/: README.md  about.md  assigning.md  authors.md  config.md  example.isi  example.md  getting_started.md  hosts.md  install.md  maintenance.md  query.md  tags.md  variables.md
lib/: Makefile  README.md  pyproject.toml
lib/src/isidore/: libIsidore.py  libIsidoreCmdline.py
lib/src/isidore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_suite/: README.md  run.sh
test_suite/results/: expected
test_suite/results/isidore-0.1.6/: 0010-echo  0020-version  0030-motd  0040-name  0050-config-version  0060-help  0070-end  0080-quit  0090-create-delete-host  0100-create-delete-tag  0110-host-attributes  0120-host-var  0130-rename-host  0140-rename-tag  0150-tag-attributes  0160-tag-var  0170-host-tag  0180-tag-host  0190-show-hosts  0200-show-graveyard  0210-show-tag-groups  0220-show-tags  (+6 more)
test_suite/tests/: 0010-echo  0020-version  0030-motd  0040-name  0050-config-version  0060-help  0070-end  0080-quit  0090-create-delete-host  0100-create-delete-tag  0110-host-attributes  0120-host-var  0130-rename-host  0140-rename-tag  0150-tag-attributes  0160-tag-var  0170-host-tag  0180-tag-host  0190-show-hosts  0200-show-graveyard  0210-show-tag-groups  0220-show-tags  0230-show-config  0240-show-inventory-human  0250-show-inventory-ini  0260-show-inventory-json  0270-show-inventory-yaml  0280-question-mark
